; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/catalog/extr_namespace.c_AccessTempTableNamespace.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/catalog/extr_namespace.c_AccessTempTableNamespace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@XACT_FLAGS_ACCESSEDTEMPNAMESPACE = common dso_local global i32 0, align 4
@MyXactFlags = common dso_local global i32 0, align 4
@myTempNamespace = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @AccessTempTableNamespace to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @AccessTempTableNamespace(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @XACT_FLAGS_ACCESSEDTEMPNAMESPACE, align 4
  %4 = load i32, i32* @MyXactFlags, align 4
  %5 = or i32 %4, %3
  store i32 %5, i32* @MyXactFlags, align 4
  %6 = load i32, i32* %2, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %13, label %8

8:                                                ; preds = %1
  %9 = load i32, i32* @myTempNamespace, align 4
  %10 = call i64 @OidIsValid(i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %8
  br label %15

13:                                               ; preds = %8, %1
  %14 = call i32 (...) @InitTempTableNamespace()
  br label %15

15:                                               ; preds = %13, %12
  ret void
}

declare dso_local i64 @OidIsValid(i32) #1

declare dso_local i32 @InitTempTableNamespace(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
